# N2Engine

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build-vs.bat  build.bat  build.sh
editor/: CMakeLists.txt
editor-server/: CMakeLists.txt
editor-server/clients/cpp/: Protocol.generated.hpp
editor-server/clients/csharp/: Protocol.generated.cs
editor-server/clients/web/: protocol.generated.ts
editor-server/include/editor-server/: Commands.hpp  EditorServer.hpp  Protocol.hpp  Serialization.hpp
editor-server/protocol/: protocol.json
editor-server/protocol/generators/: generate_cpp.py  generate_csharp.py  generate_typescript.py
editor-server/src/: EditorServer.cpp  Main.cpp
editor/src/: Main.cpp
engine/: CMakeLists.txt
engine/include/engine/: Application.hpp  Camera.hpp  Component.hpp  ComponentConcepts.hpp  GameObject.hpp  GameObject.inl  GameObjectScene.hpp  IRenderable.hpp  Logger.hpp  Positionable.hpp  Time.hpp  Transform.hpp  Window.hpp
engine/include/engine/audio/: AudioClip.hpp  AudioHandle.hpp  AudioListener.hpp  AudioLoaders.hpp  AudioMixerGroup.hpp  AudioSource.hpp  AudioSystem.hpp
engine/include/engine/base/: Asset.hpp  EventHandler.hpp
engine/include/engine/common/: Color.hpp  ScriptUtils.hpp  UUIDHash.hpp
engine/include/engine/config/: ApplicationOptions.hpp
engine/include/engine/example/: QuadRenderer.hpp
engine/include/engine/example/renderers/: CubeRenderer.hpp  PolygonRenderer.hpp  QuadRenderer.hpp  SphereRenderer.hpp
engine/include/engine/input/: ActionMap.hpp  Input.hpp  InputBinding.hpp  InputBindingFactory.hpp  InputMapping.hpp  InputSystem.hpp  InputTypes.hpp  InputValue.hpp  Mouse.hpp
engine/include/engine/io/: AssetMetadata.hpp  ResourceLoader.hpp  ResourceLoader.inl  ResourcePath.hpp  ResourceUUID.hpp  Resources.hpp  meta-file-structure.json
engine/include/engine/math/: Matrix.hpp  Quaternion.hpp  UUID.hpp  Vector2.hpp  Vector3.hpp  VectorN.hpp
engine/include/engine/physics/: BoxCollider.hpp  CapsuleCollider.hpp  ICollider.hpp  IPhysicsBackend.hpp  PhysicsHandle.hpp  PhysicsMaterial.hpp  PhysicsTypes.hpp  Raycast.hpp  Rigidbody.hpp  SphereCollider.hpp
engine/include/engine/physics/physx/: PhysXBackend.hpp
engine/include/engine/prefabs/: Prefab.hpp  PrefabManager.hpp
engine/include/engine/rendering/: Light.hpp
engine/include/engine/sceneManagement/: Scene.cpp  Scene.hpp  Scene.inl  SceneManager.hpp
engine/include/engine/scheduling/: Coroutine.hpp  CoroutineScheduler.hpp  CoroutineWait.hpp
engine/include/engine/scripting/: LuaComponent.hpp  LuaRuntime.hpp  LuaScript.hpp
engine/include/engine/scripting/bindings/: LuaBindings.hpp
engine/include/engine/serialization/: ComponentRegistry.hpp  ComponentSerializer.hpp  MathSerialization.hpp  ReferenceResolver.hpp
engine/include/gameobject/: GameObject.hpp  Transform.hpp
engine/src/: Application.cpp  Camera.cpp  Logger.cpp  Main.cpp  Positionable.cpp  Time.cpp  Transform.cpp  Window.cpp
engine/src/audio/: AudioClip.cpp  AudioClipLoader.cpp  AudioListener.cpp  AudioLoaders.cpp  AudioSource.cpp  AudioSystem.cpp
engine/src/base/: Asset.cpp
engine/src/common/: Color.cpp
engine/src/example/: QuadRenderer.cpp
engine/src/gameobject/: Component.cpp  GameObject.cpp
engine/src/input/: ActionMap.cpp  InputBinding.cpp  InputBindingFactory.cpp  InputSystem.cpp  Mouse.cpp
engine/src/io/: AssetMetadata.cpp  ResourceLoader.cpp  ResourceUUID.cpp  Resources.cpp
engine/src/math/: Quaternion.cpp  UUID.cpp  Vector2.cpp  Vector3.cpp
engine/src/physics/: BoxCollider.cpp  CapsuleCollider.cpp  ICollider.cpp  PhysicsMaterial.cpp  Raycast.cpp  Rigidbody.cpp  SphereCollider.cpp
engine/src/physics/physx/: PhysXBackend.cpp
engine/src/prefabs/: Prefab.cpp  PrefabManager.cpp
engine/src/rendering/: Light.cpp
engine/src/sceneManagement/: Scene.cpp  SceneManager.cpp
engine/src/scheduling/: Coroutine.cpp  CoroutineScheduler.cpp  CoroutineWait.cpp
engine/src/scripting/: LuaComponent.cpp  LuaRuntime.cpp
engine/src/scripting/bindings/: LuaApplicationBindings.cpp  LuaAudioBindings.cpp  LuaCameraBindings.cpp  LuaCoreBindings.cpp  LuaDebugBindings.cpp  LuaEventsBindings.cpp  LuaInputBindings.cpp  LuaMathBindings.cpp  LuaPhysicsBindings.cpp  LuaTimeBindings.cpp  LuaUtilityBindings.cpp  LuaWindowBindings.cpp  engine-api.lua
engine/src/serialization/: ComponentSerializer.cpp
math/: CMakeLists.txt
math/include/math/: Constants.hpp  CpuInfo.hpp  Functions.hpp  MathRegistrar.hpp  Matrix.hpp  Quaternion.hpp  Random.hpp  UUID.hpp  Utils.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  VectorN.hpp
math/src/math/: MathRegistrar.cpp  Quaternion.cpp  Random.cpp  UUID.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
renderer/: CMakeLists.txt
renderer/docs/: RendererNotes.md
renderer/include/renderer/common/: IMaterial.hpp  IMesh.hpp  IShader.hpp  ITexture.hpp  RenderTypes.hpp  Renderer.hpp  SceneLighting.hpp
renderer/include/renderer/opengl/: OpenGLMaterial.hpp  OpenGLMesh.hpp  OpenGLRenderer.hpp  OpenGLShader.hpp  OpenGLTexture.hpp
renderer/include/renderer/software/: RenderThread.hpp  SWMaterial.hpp  SWMesh.hpp  SWShader.hpp  SWTexture.hpp  SoftwareRenderer.hpp
renderer/include/renderer/vulkan/: VulkanRenderer.hpp
renderer/src/opengl/: OpenGLMaterial.cpp  OpenGLMesh.cpp  OpenGLRenderer.cpp  OpenGLShader.cpp  OpenGLTexture.cpp
renderer/src/software/: SoftwareRenderer.cpp
renderer/src/vulkan/: VulcanRenderer.cpp  VulkanRenderer.cpp
test_project/: CMakeLists.txt
test_project/include/test_project/: CameraController.hpp  Spin.hpp  StandardInputHandler.hpp
test_project/src/: CameraController.cpp  Main.cpp  Spin.cpp  StandardInputHandler.cpp
tests/: CMakeLists.txt
tests/engine/: CMakeLists.txt
tests/engine/input/: InputSystemTests.cpp
tests/engine/prefabs/: PrefabTests.cpp
tests/math/: CMakeLists.txt
tests/math/math_types/: QuaternionTests.cpp
tests/renderer/: CMakeLists.txt
